--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "HeapSort",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -13,5 +13,7 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "author": "Mihir Mathur",
+  "license": "ISC"
 }
