--- a/HeapSortAndroid/app/src/main/AndroidManifest.xml
+++ b/HeapSortAndroid/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-feature android:name="android.hardware.camera"
         android:required="true" />
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
