--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "base64-img": "^1.0.3",
     "body-parser": "~1.13.2",
+    "clarifai": "^1.2.1",
+    "cognitive-services": "^0.1.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
