--- a/HeapSortAndroid/app/build.gradle
+++ b/HeapSortAndroid/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 24
@@ -26,4 +27,5 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.microsoft.projectoxford:vision:1.0.354'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
 }
