--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "firebase": "^3.4.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
     "morgan": "~1.6.1",
