--- a/HeapSortAndroid/app/src/main/AndroidManifest.xml
+++ b/HeapSortAndroid/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main"
+            android:name=".HeapSort"
+            android:label="HeapSort"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
