--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^3.4.0",
     "fs": "0.0.1-security",
     "http": "0.0.0",
+    "json2csv": "^3.6.3",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
